# scoop

./: .gitignore  .prettierrc  LICENSE  Mischief.js  Mischief.test.js  MischiefExchange.js  MischiefLog.js  MischiefOptions.js  README.md  Scoop.js  Scoop.test.js  constants.js  docs.md  example.js  make-patches.sh  options.js  options.test.js  options.types.js  package-lock.json  package.json  postinstall.sh  proxyexample.js  types.js
.github/: dependabot.yml
.services/signer/: README.md  app.py  pyproject.toml  requirements.txt  run.sh
assets/: provenance-summary.njk  video-extracted-summary.njk
browser-scripts/: autoPlayMedia.js  autoScroll.js  index.js  listAllStylesheets.js  listMediaSources.js  listResponsiveImages.js
docs/: conf.py  config.json  index.rst  requirements.txt
exchanges/: MischiefCDPExchange.js  MischiefExchange.js  MischiefExchange.test.js  MischiefGeneratedExchange.js  MischiefGeneratedExchange.test.js  MischiefHARExchange.js  MischiefProxyExchange.js  MischiefProxyExchange.test.js  ScoopExchange.js  ScoopExchange.test.js  ScoopExchange.types.js  ScoopGeneratedExchange.js  ScoopGeneratedExchange.test.js  ScoopProxyExchange.js  ScoopProxyExchange.test.js  index.js
exporters/: index.js  mischiefToHDWacz.js  mischiefToWacz.js  mischiefToWacz.test.js  mischiefToWarc.js  mischiefToWarc.test.js  raw.js  scoopToWACZ.js  scoopToWACZ.test.js  scoopToWARC.js  scoopToWARC.test.js  scoopToWacz.js  scoopToWacz.test.js  scoopToWarc.js  scoopToWarc.test.js  wacz.js  warc.js
fixtures/: example-https.wacz  example-https.warc
importers/: WACZToScoop.js  (+7 more)
(+66 files in other folders)
